corrección de grillas

--- a/portfolio.html
+++ b/portfolio.html
@@ -117,7 +117,7 @@
 			<div class=" row">
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="cincofuegos.html" class="image" style="background-image: url(img/casas/cincofuegos_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -127,7 +127,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="crystal.html" class="image" style="background-image: url(img/casas/crystal_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -137,7 +137,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="#" class="image" style="background-image: url(img/casas/eldescanso_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -147,7 +147,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/ironhaus_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -157,7 +157,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/mahimahi_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -167,7 +167,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/pacific_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -177,7 +177,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/saldelima_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -187,7 +187,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/pinebeach_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -198,7 +198,7 @@
 
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/dosmares_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -208,7 +208,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/salsabrava_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -218,7 +218,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/santapaula_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -228,7 +228,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/180south_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -238,7 +238,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/animal_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -248,7 +248,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/beton_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -258,7 +258,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/biscayne_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -268,7 +268,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/chillbeach_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -278,7 +278,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/deau_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -288,7 +288,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/fly_cat.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -298,7 +298,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/surfersparadise_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -308,7 +308,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/virazon_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -318,7 +318,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/alaia_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -328,7 +328,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/hut_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -338,7 +338,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/eleuthera_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -348,7 +348,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/lavista_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -358,7 +358,7 @@
 				</article>
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/oldwoody_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
@@ -369,7 +369,7 @@
 
 
 				<!-- Portfolio item -->
-				<article class="portfolio col-xs-12 col-sm-6 col-xl-4">
+				<article class="portfolio col-xs-12 col-sm-6">
 					<a href="" class="image" style="background-image: url(img/casas/terrazas_portada.jpg)">
 						<div class="content-overlay"></div>
 						<div class="content-details fadeIn-right">
