--- a/estudio.html
+++ b/estudio.html
@@ -31,17 +31,17 @@
 	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	 <!-- VENDORS -->
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="css/idangerous.swiper.css" />   
-    <link rel="stylesheet" href="css/justifiedGallery.min.css">
-    <link rel="stylesheet" href="css/colorbox.css">
-    <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="css/style.css" />
+	<!-- VENDORS -->
+	<link rel="stylesheet" href="css/reset.css" />
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/font-awesome.min.css" />
+	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css" />
+	<link rel="stylesheet" href="css/idangerous.swiper.css" />
+	<link rel="stylesheet" href="css/justifiedGallery.min.css">
+	<link rel="stylesheet" href="css/colorbox.css">
+	<!-- CUSTOM CSS -->
+	<link rel="stylesheet" href="css/style.css" />
 
 </head>
 
@@ -59,11 +59,11 @@
 		<a href="#" id="sidebar-button"></a>
 
 		<!-- Logo -->
-		<header id="logo">
-			<a href="index.html"><img src="img/logo.png" alt=""></a>
-			<!-- <h1>Pacifica</h1>
-				<h2>Ezequiel Gil <strong>Arquitecto</strong></h2> -->
-		</header>
+<header id="logo">
+	<a href="index.html">
+		<h1>Pacífica</h1>
+	</a>
+</header>
 
 		<!-- Portfolio close button -->
 		<a href="#" id="portfolio-close"></a>
@@ -122,76 +122,65 @@
 
 
 				<!-- Main content -->
-				<div class="normal-gallery row" itemscope>
+				<div class="estudio">
 
-					<!-- Portfolio item -->
-					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
-						<a href="./img/team/estudio_01.jpg" data-size="1280x720">
-							<img src="./img/team/estudio_01.jpg" itempropo alt="">
-						</a>
-					</figure>
-					<!-- Portfolio item -->
-					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
-						<a href="./img/team/estudio_02.jpg" data-size="1280x720">
-							<img src="./img/team/estudio_02.jpg" itempropo alt="">
-						</a>
-					</figure>
-					<!-- Portfolio item -->
-					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
-						<a href="./img/team/estudio_03.jpg" data-size="1280x720">
-							<img src="./img/team/estudio_03.jpg" itempropo alt="">
-						</a>
-					</figure>
-					<!-- Portfolio item -->
-					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
-						<a href="./img/team/estudio_04.jpg" data-size="1280x720">
-							<img src="./img/team/estudio_04.jpg" itempropo alt="">
-						</a>
-					</figure>
-					<!-- Portfolio item -->
-					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
-						<a href="./img/team/estudio_05.jpg" data-size="1280x720">
-							<img src="./img/team/estudio_05.jpg" itempropo alt="">
-						</a>
-					</figure>
-					<!-- Portfolio item -->
-					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
-						<a href="./img/team/estudio_06.jpg" data-size="1280x720">
-							<img src="./img/team/estudio_06.jpg" itempropo alt="">
-						</a>
-					</figure>
-					<!-- Portfolio item -->
-					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
-						<a href="./img/team/estudio_07.jpg" data-size="1280x720">
-							<img src="./img/team/estudio_07.jpg" itempropo alt="">
-						</a>
-					</figure>
-					<!-- Portfolio item -->
-					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
-						<a href="./img/team/estudio_08.jpg" data-size="1280x720">
-							<img src="./img/team/estudio_08.jpg" itempropo alt="">
-						</a>
-					</figure>
-					<!-- Portfolio item -->
-					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
-						<a href="./img/team/estudio_09.jpg" data-size="1280x720">
-							<img src="./img/team/estudio_09.jpg" itempropo alt="">
-						</a>
-					</figure>
-					<!-- Portfolio item -->
-					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
-						<a href="./img/team/estudio_10.jpg" data-size="1280x720">
-							<img src="./img/team/estudio_10.jpg" itempropo alt="">
-						</a>
-					</figure>
-					<!-- Portfolio item -->
-					<figure itemprop="associatedMedia" class="col-xs-12 col-sm-6 col-md-4" itemscope>
-						<a href="./img/team/estudio_11.jpg" data-size="1280x720">
-							<img src="./img/team/estudio_11.jpg" itempropo alt="">
-						</a>
-					</figure>
 
-					
+					<a href="./img/team/estudio_01.jpg" rel="estudio-1">
+						<img alt="Pacífica Arquitectura" src="./img/team/estudio_01.jpg">
+					</a>
+
+
+					<a href="./img/team/estudio_02.jpg" rel="estudio-1">
+						<img alt="Pacífica Arquitectura" src="./img/team/estudio_02.jpg">
+					</a>
+
+
+					<a href="./img/team/estudio_03.jpg" rel="estudio-1">
+						<img alt="Pacífica Arquitectura" src="./img/team/estudio_03.jpg">
+					</a>
+
+
+					<a href="./img/team/estudio_04.jpg" rel="estudio-1">
+						<img alt="Pacífica Arquitectura" src="./img/team/estudio_04.jpg">
+					</a>
+
+
+					<a href="./img/team/estudio_05.jpg" rel="estudio-1">
+						<img alt="Pacífica Arquitectura" src="./img/team/estudio_05.jpg">
+					</a>
+
+
+					<a href="./img/team/estudio_06.jpg" rel="estudio-1">
+						<img alt="Pacífica Arquitectura" src="./img/team/estudio_06.jpg">
+					</a>
+
+
+					<a href="./img/team/estudio_07.jpg" rel="estudio-1">
+						<img alt="Pacífica Arquitectura" src="./img/team/estudio_07.jpg">
+					</a>
+
+
+					<a href="./img/team/estudio_08.jpg" rel="estudio-1">
+						<img alt="Pacífica Arquitectura" src="./img/team/estudio_08.jpg">
+					</a>
+
+
+					<a href="./img/team/estudio_09.jpg" rel="estudio-1">
+						<img alt="Pacífica Arquitectura" src="./img/team/estudio_09.jpg">
+					</a>
+
+
+					<a href="./img/team/estudio_10.jpg" rel="estudio-1">
+						<img alt="Pacífica Arquitectura" src="./img/team/estudio_10.jpg">
+					</a>
+
+
+					<a href="./img/team/estudio_11.jpg" rel="estudio-1">
+						<img alt="Pacífica Arquitectura" src="./img/team/estudio_11.jpg">
+					</a>
+
+
+
 
 
 
@@ -290,12 +279,29 @@
 
 	<!-- JavaScripts -->
 	<script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/idangerous.swiper.min.js"></script>   
-    <script type="text/javascript" src="js/colorbox.js"></script>
-    <script type="text/javascript" src="js/jquery.justifiedGallery.min.js"></script>
-    <script type="text/javascript" src="js/custom.js"></script>
-    <script type="text/javascript" src="js/ps.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/idangerous.swiper.min.js"></script>
+	<script type="text/javascript" src="js/colorbox.js"></script>
+	<script type="text/javascript" src="js/jquery.justifiedGallery.min.js"></script>
+	<script type="text/javascript" src="js/custom.js"></script>
+	<script type="text/javascript" src="js/ps.js"></script>
+	<script type="text/javascript">
+		$('.estudio').justifiedGallery({
+			lastRow: 'nojustify',
+			rowHeight: 250,
+			maxRowHeight: 250,
+			rel: 'gallery1', //replace with 'gallery1' the rel attribute of each link
+			margins: 10
+		}).on('jg.complete', function () {
+			$(this).find('a').colorbox({
+				maxWidth: '100%',
+				maxHeight: '100%',
+				opacity: 0.7,
+				transition: 'elastic',
+				current: ''
+			});
+		});
+	</script>
 
 </body>
 
