optimización de librerías

--- a/index.html
+++ b/index.html
@@ -31,14 +31,10 @@
 	<meta name="theme-color" content="#ffffff">
 
 	<!-- VENDORS -->
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/extras.css">
     
-    <link rel="stylesheet" href="css/idangerous.swiper.css" />   
-    <link rel="stylesheet" href="css/justifiedGallery.min.css">
-    <link rel="stylesheet" href="css/colorbox.css">
-    <!-- CUSTOM CSS -->
+	<!-- CUSTOM CSS -->
+	
     <link rel="stylesheet" href="css/style.css" />
 
 </head>
@@ -237,12 +233,8 @@
 
 	<!-- JavaScripts -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/idangerous.swiper.min.js"></script>   
-    <script type="text/javascript" src="js/colorbox.js"></script>
-    <script type="text/javascript" src="js/jquery.justifiedGallery.min.js"></script>
+    <script type="text/javascript" src="js/extras.js"></script>   
     <script type="text/javascript" src="js/custom.js"></script>
-    <script type="text/javascript" src="js/ps.js"></script>
 
 
 </body>
