--- a/lifestyle.html
+++ b/lifestyle.html
@@ -31,13 +31,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!-- VENDORS -->
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
-
-    <link rel="stylesheet" href="css/idangerous.swiper.css" />
-    <link rel="stylesheet" href="css/justifiedGallery.min.css">
-    <link rel="stylesheet" href="css/colorbox.css">
+    <link rel="stylesheet" href="css/extras.css">
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="css/style.css" />
 
@@ -118,60 +112,60 @@
 
             <!-- Main content -->
 
-            <div class="lifestyle" itemscope>
+            <div class="gallery" itemscope>
 
-                    <a href="./img/lifestyle/ls_01.jpg" rel="lifestyle-1">
+                    <a href="./img/lifestyle/ls_01.jpg" >
                         <img src="./img/lifestyle/ls_01.jpg" >
                     </a>
-                    <a href="./img/lifestyle/ls_02.jpg" rel="lifestyle-1">
+                    <a href="./img/lifestyle/ls_02.jpg" >
                         <img src="./img/lifestyle/ls_02.jpg" >
                     </a>
-                    <a href="./img/lifestyle/ls_03.jpg" rel="lifestyle-1">
+                    <a href="./img/lifestyle/ls_03.jpg" >
                         <img src="./img/lifestyle/ls_03.jpg" >
                     </a>
-                    <a href="./img/lifestyle/ls_04.jpg" rel="lifestyle-1">
+                    <a href="./img/lifestyle/ls_04.jpg" >
                         <img src="./img/lifestyle/ls_04.jpg" >
                     </a>
-                    <a href="./img/lifestyle/ls_05.jpg" rel="lifestyle-1">
+                    <a href="./img/lifestyle/ls_05.jpg" >
                         <img src="./img/lifestyle/ls_05.jpg" >
                     </a>
-                    <a href="./img/lifestyle/ls_06.jpg" rel="lifestyle-1">
+                    <a href="./img/lifestyle/ls_06.jpg" >
                         <img src="./img/lifestyle/ls_06.jpg" >
                     </a>
-                    <a href="./img/lifestyle/ls_07.jpg" rel="lifestyle-1">
+                    <a href="./img/lifestyle/ls_07.jpg" >
                         <img src="./img/lifestyle/ls_07.jpg" >
                     </a>
-                    <a href="./img/lifestyle/ls_08.jpg" rel="lifestyle-1">
+                    <a href="./img/lifestyle/ls_08.jpg" >
                         <img src="./img/lifestyle/ls_08.jpg" >
                     </a>
-                    <a href="./img/lifestyle/ls_09.jpg" rel="lifestyle-1">
+                    <a href="./img/lifestyle/ls_09.jpg" >
                         <img src="./img/lifestyle/ls_09.jpg" >
                     </a>
-                    <a href="./img/lifestyle/ls_10.jpg" rel="lifestyle-1">
+                    <a href="./img/lifestyle/ls_10.jpg" >
                         <img src="./img/lifestyle/ls_10.jpg" >
                     </a>
-                    <a href="./img/lifestyle/ls_11.jpg" rel="lifestyle-1">
+                    <a href="./img/lifestyle/ls_11.jpg" >
                         <img src="./img/lifestyle/ls_11.jpg" >
                     </a>
-                    <a href="./img/lifestyle/ls_12.jpg" rel="lifestyle-1">
+                    <a href="./img/lifestyle/ls_12.jpg" >
                         <img src="./img/lifestyle/ls_12.jpg" >
                     </a>
-                    <a href="./img/lifestyle/ls_13.jpg" rel="lifestyle-1">
+                    <a href="./img/lifestyle/ls_13.jpg" >
                         <img src="./img/lifestyle/ls_13.jpg" >
                     </a>
-                    <a href="./img/lifestyle/ls_14.jpg" rel="lifestyle-1">
+                    <a href="./img/lifestyle/ls_14.jpg" >
                         <img src="./img/lifestyle/ls_14.jpg" >
                     </a>
-                    <a href="./img/lifestyle/ls_15.jpg" rel="lifestyle-1">
+                    <a href="./img/lifestyle/ls_15.jpg" >
                         <img src="./img/lifestyle/ls_15.jpg" >
                     </a>
-                    <a href="./img/lifestyle/ls_16.jpg" rel="lifestyle-1">
+                    <a href="./img/lifestyle/ls_16.jpg" >
                         <img src="./img/lifestyle/ls_16.jpg" >
                     </a>
-                    <a href="./img/lifestyle/ls_17.jpg" rel="lifestyle-1">
+                    <a href="./img/lifestyle/ls_17.jpg" >
                         <img src="./img/lifestyle/ls_17.jpg" >
                     </a>
-                    <a href="./img/lifestyle/ls_18.jpg" rel="lifestyle-1">
+                    <a href="./img/lifestyle/ls_18.jpg" >
                         <img src="./img/lifestyle/ls_18.jpg" >
                     </a>
 
@@ -266,30 +260,11 @@
     </div>
    
 
-     <!-- JavaScripts -->
+    <!-- JavaScripts -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/idangerous.swiper.min.js"></script>
-    <script type="text/javascript" src="js/colorbox.js"></script>
-    <script type="text/javascript" src="js/jquery.justifiedGallery.min.js"></script>
+    <script type="text/javascript" src="js/extras.js"></script>   
     <script type="text/javascript" src="js/custom.js"></script>
-    <script type="text/javascript" src="js/ps.js"></script>
-    <script type="text/javascript">
-        $('.lifestyle').justifiedGallery({
-            lastRow: 'nojustify',            
-            rowHeight: 250,
-            rel: 'gallery1', //replace with 'gallery1' the rel attribute of each link
-            margins: 10
-        }).on('jg.complete', function () {
-            $(this).find('a').colorbox({
-                maxWidth: '80%',
-                maxHeight: '80%',
-                opacity: 0.7,
-                transition: 'elastic',
-                current: ''
-            });
-        });
-    </script>
+   
 
 
 
