--- a/brasil.html
+++ b/brasil.html
@@ -30,13 +30,7 @@
     <meta name="theme-color" content="#ffffff" />
 
     <!-- VENDORS -->
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
-
-    <link rel="stylesheet" href="css/idangerous.swiper.css" />
-    <link rel="stylesheet" href="css/justifiedGallery.min.css">
-    <link rel="stylesheet" href="css/colorbox.css">
+    <link rel="stylesheet" href="css/extras.css">
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -106,11 +100,11 @@
 
             <!-- Main content -->            
 
-            <div class="myExMul">
-                <a href="./img/desarrollos/brasil_01.jpg" rel="myExMul-1">
+            <div class="gallery">
+                <a href="./img/desarrollos/brasil_01.jpg">
                     <img alt="BRASIL" src="./img/desarrollos/brasil_01_m.jpg" />
                 </a>
-                <a href="./img/desarrollos/brasil_02.jpg" rel="myExMul-1">
+                <a href="./img/desarrollos/brasil_02.jpg">
                     <img alt="BRASIL" src="./img/desarrollos/brasil_02_m.jpg" />
                 </a>
                 
@@ -208,27 +202,11 @@
 
     <!-- JavaScripts -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/idangerous.swiper.min.js"></script>
-    <script type="text/javascript" src="js/colorbox.js"></script>
-    <script type="text/javascript" src="js/jquery.justifiedGallery.min.js"></script>
+    <script type="text/javascript" src="js/extras.js"></script>   
     <script type="text/javascript" src="js/custom.js"></script>
-    <script type="text/javascript" src="js/ps.js"></script>
+
     <script type="text/javascript">
-        $('.myExMul').justifiedGallery({
-            lastRow: 'nojustify',
-            rowHeight: 250,
-            rel: 'gallery1', //replace with 'gallery1' the rel attribute of each link
-            margins: 10
-        }).on('jg.complete', function () {
-            $(this).find('a').colorbox({
-                maxWidth: '100%',
-                maxHeight: '100%',
-                opacity: 0.7,
-                transition: 'elastic',
-                current: ''
-            });
-        });
+        
     </script>
 
 </body>
