--- a/cincofuegos.html
+++ b/cincofuegos.html
@@ -30,13 +30,7 @@
     <meta name="theme-color" content="#ffffff" />
 
     <!-- VENDORS -->
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
-
-    <link rel="stylesheet" href="css/idangerous.swiper.css" />
-    <link rel="stylesheet" href="css/justifiedGallery.min.css">
-    <link rel="stylesheet" href="css/colorbox.css">
+    <link rel="stylesheet" href="css/extras.css">
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -106,60 +100,60 @@
 
             <!-- Main content -->
 
-            <div class="myExMul">
-                <a href="./img/casas/cincofuegos_07.jpg" rel="myExMul-1" style="display">
+            <div class="gallery">
+                <a href="./img/casas/cincofuegos_07.jpg">
                     <img alt="CINCO FUEGOS" src="./img/casas/cincofuegos_07_m.jpg" />
                 </a>
-                <a href="./img/casas/cincofuegos_01.jpg" rel="myExMul-1">
+                <a href="./img/casas/cincofuegos_01.jpg" >
                     <img alt="CINCO FUEGOS" src="./img/casas/cincofuegos_01_m.jpg" />
                 </a>
-                <a href="./img/casas/cincofuegos_02.jpg" rel="myExMul-1">
+                <a href="./img/casas/cincofuegos_02.jpg" >
                     <img alt="CINCO FUEGOS" src="./img/casas/cincofuegos_02_m.jpg" />
                 </a>
-                <a href="./img/casas/cincofuegos_03.jpg" rel="myExMul-1">
+                <a href="./img/casas/cincofuegos_03.jpg" >
                     <img alt="CINCO FUEGOS" src="./img/casas/cincofuegos_03_m.jpg" />
                 </a>
-                <a href="./img/casas/cincofuegos_04.jpg" rel="myExMul-1">
+                <a href="./img/casas/cincofuegos_04.jpg" >
                     <img alt="CINCO FUEGOS" src="./img/casas/cincofuegos_04_m.jpg" />
                 </a>
-                <a href="./img/casas/cincofuegos_05.jpg" rel="myExMul-1">
+                <a href="./img/casas/cincofuegos_05.jpg" >
                     <img alt="CINCO FUEGOS" src="./img/casas/cincofuegos_05_m.jpg" />
                 </a>
 
-                <a href="./img/casas/cincofuegos_08.jpg" rel="myExMul-1">
+                <a href="./img/casas/cincofuegos_08.jpg" >
                     <img alt="CINCO FUEGOS" src="./img/casas/cincofuegos_08_m.jpg" />
                 </a>
-                <a href="./img/casas/cincofuegos_06.jpg" rel="myExMul-1">
+                <a href="./img/casas/cincofuegos_06.jpg" >
                     <img alt="CINCO FUEGOS" src="./img/casas/cincofuegos_06_m.jpg" />
                 </a>
-                <a href="./img/casas/cincofuegos_09.jpg" rel="myExMul-1">
+                <a href="./img/casas/cincofuegos_09.jpg" >
                     <img alt="CINCO FUEGOS" src="./img/casas/cincofuegos_09_m.jpg" />
                 </a>
-                <a href="./img/casas/cincofuegos_10.jpg" rel="myExMul-1">
+                <a href="./img/casas/cincofuegos_10.jpg" >
                     <img alt="CINCO FUEGOS" src="./img/casas/cincofuegos_10_m.jpg" />
                 </a>
-                <a href="./img/casas/cincofuegos_11.jpg" rel="myExMul-1">
+                <a href="./img/casas/cincofuegos_11.jpg" >
                     <img alt="CINCO FUEGOS" src="./img/casas/cincofuegos_11_m.jpg" />
                 </a>
-                <a href="./img/casas/cincofuegos_12.jpg" rel="myExMul-1">
+                <a href="./img/casas/cincofuegos_12.jpg" >
                     <img alt="CINCO FUEGOS" src="./img/casas/cincofuegos_12_m.jpg" />
                 </a>
-                <a href="./img/casas/cincofuegos_13.jpg" rel="myExMul-1">
+                <a href="./img/casas/cincofuegos_13.jpg" >
                     <img alt="CINCO FUEGOS" src="./img/casas/cincofuegos_13_m.jpg" />
                 </a>
-                <a href="./img/casas/cincofuegos_14.jpg" rel="myExMul-1">
+                <a href="./img/casas/cincofuegos_14.jpg" >
                     <img alt="CINCO FUEGOS" src="./img/casas/cincofuegos_14_m.jpg" />
                 </a>
-                <a href="./img/casas/cincofuegos_15.jpg" rel="myExMul-1">
+                <a href="./img/casas/cincofuegos_15.jpg" >
                     <img alt="CINCO FUEGOS" src="./img/casas/cincofuegos_15_m.jpg" />
                 </a>
-                <a href="./img/casas/cincofuegos_16.jpg" rel="myExMul-1">
+                <a href="./img/casas/cincofuegos_16.jpg" >
                     <img alt="CINCO FUEGOS" src="./img/casas/cincofuegos_16_m.jpg" />
                 </a>
-                <a href="./img/casas/cincofuegos_17.jpg" rel="myExMul-1">
+                <a href="./img/casas/cincofuegos_17.jpg" >
                     <img alt="CINCO FUEGOS" src="./img/casas/cincofuegos_17_m.jpg" />
                 </a>
-                <a href="./img/casas/cincofuegos_18.jpg" rel="myExMul-1">
+                <a href="./img/casas/cincofuegos_18.jpg" >
                     <img alt="CINCO FUEGOS" src="./img/casas/cincofuegos_18_m.jpg" />
                 </a>
 
@@ -258,29 +252,9 @@
 
     <!-- JavaScripts -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/idangerous.swiper.min.js"></script>
-    <script type="text/javascript" src="js/colorbox.js"></script>
-    <script type="text/javascript" src="js/jquery.justifiedGallery.min.js"></script>
+    <script type="text/javascript" src="js/extras.js"></script>   
     <script type="text/javascript" src="js/custom.js"></script>
-    <script type="text/javascript" src="js/ps.js"></script>
-    <script type="text/javascript">
-        $('.myExMul').justifiedGallery({
-            lastRow: 'nojustify',
-            rowHeight: 250,
-            maxRowHeight: 250,
-            rel: 'gallery1', //replace with 'gallery1' the rel attribute of each link
-            margins: 10
-        }).on('jg.complete', function () {
-            $(this).find('a').colorbox({
-                maxWidth: '100%',
-                maxHeight: '100%',
-                opacity: 0.7,
-                transition: 'elastic',
-                current: ''
-            });
-        });
-    </script>
+    
 
 </body>
 
