--- a/estudio.html
+++ b/estudio.html
@@ -32,14 +32,7 @@
 	<meta name="theme-color" content="#ffffff">
 
 	<!-- VENDORS -->
-	<link rel="stylesheet" href="css/reset.css" />
-	<link rel="stylesheet" href="css/bootstrap.min.css" />
-	<link rel="stylesheet" href="css/font-awesome.min.css" />
-	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700|Oswald:400" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" href="css/idangerous.swiper.css" />
-	<link rel="stylesheet" href="css/justifiedGallery.min.css">
-	<link rel="stylesheet" href="css/colorbox.css">
+    <link rel="stylesheet" href="css/extras.css">
 	<!-- CUSTOM CSS -->
 	<link rel="stylesheet" href="css/style.css" />
 
@@ -122,60 +115,60 @@
 
 
 				<!-- Main content -->
-				<div class="estudio">
+				<div class="gallery">
 
 
-					<a href="./img/team/estudio_01.jpg" rel="estudio-1">
+					<a href="./img/team/estudio_01.jpg" >
 						<img alt="Pacífica Arquitectura" src="./img/team/estudio_01.jpg">
 					</a>
 
 
-					<a href="./img/team/estudio_02.jpg" rel="estudio-1">
+					<a href="./img/team/estudio_02.jpg" >
 						<img alt="Pacífica Arquitectura" src="./img/team/estudio_02.jpg">
 					</a>
 
 
-					<a href="./img/team/estudio_03.jpg" rel="estudio-1">
+					<a href="./img/team/estudio_03.jpg" >
 						<img alt="Pacífica Arquitectura" src="./img/team/estudio_03.jpg">
 					</a>
 
 
-					<a href="./img/team/estudio_04.jpg" rel="estudio-1">
+					<a href="./img/team/estudio_04.jpg" >
 						<img alt="Pacífica Arquitectura" src="./img/team/estudio_04.jpg">
 					</a>
 
 
-					<a href="./img/team/estudio_05.jpg" rel="estudio-1">
+					<a href="./img/team/estudio_05.jpg" >
 						<img alt="Pacífica Arquitectura" src="./img/team/estudio_05.jpg">
 					</a>
 
 
-					<a href="./img/team/estudio_06.jpg" rel="estudio-1">
+					<a href="./img/team/estudio_06.jpg" >
 						<img alt="Pacífica Arquitectura" src="./img/team/estudio_06.jpg">
 					</a>
 
 
-					<a href="./img/team/estudio_07.jpg" rel="estudio-1">
+					<a href="./img/team/estudio_07.jpg" >
 						<img alt="Pacífica Arquitectura" src="./img/team/estudio_07.jpg">
 					</a>
 
 
-					<a href="./img/team/estudio_08.jpg" rel="estudio-1">
+					<a href="./img/team/estudio_08.jpg" >
 						<img alt="Pacífica Arquitectura" src="./img/team/estudio_08.jpg">
 					</a>
 
 
-					<a href="./img/team/estudio_09.jpg" rel="estudio-1">
+					<a href="./img/team/estudio_09.jpg" >
 						<img alt="Pacífica Arquitectura" src="./img/team/estudio_09.jpg">
 					</a>
 
 
-					<a href="./img/team/estudio_10.jpg" rel="estudio-1">
+					<a href="./img/team/estudio_10.jpg" >
 						<img alt="Pacífica Arquitectura" src="./img/team/estudio_10.jpg">
 					</a>
 
 
-					<a href="./img/team/estudio_11.jpg" rel="estudio-1">
+					<a href="./img/team/estudio_11.jpg" >
 						<img alt="Pacífica Arquitectura" src="./img/team/estudio_11.jpg">
 					</a>
 
@@ -278,30 +271,10 @@
 	</div>
 
 	<!-- JavaScripts -->
-	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/idangerous.swiper.min.js"></script>
-	<script type="text/javascript" src="js/colorbox.js"></script>
-	<script type="text/javascript" src="js/jquery.justifiedGallery.min.js"></script>
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/extras.js"></script>
 	<script type="text/javascript" src="js/custom.js"></script>
-	<script type="text/javascript" src="js/ps.js"></script>
-	<script type="text/javascript">
-		$('.estudio').justifiedGallery({
-			lastRow: 'nojustify',
-			rowHeight: 250,
-			maxRowHeight: 250,
-			rel: 'gallery1', //replace with 'gallery1' the rel attribute of each link
-			margins: 10
-		}).on('jg.complete', function () {
-			$(this).find('a').colorbox({
-				maxWidth: '100%',
-				maxHeight: '100%',
-				opacity: 0.7,
-				transition: 'elastic',
-				current: ''
-			});
-		});
-	</script>
+	
 
 </body>
 
