--- a/portfolio.html
+++ b/portfolio.html
@@ -32,13 +32,8 @@
 	<meta name="theme-color" content="#ffffff">
 
 	<!-- VENDORS -->
-	<link rel="stylesheet" href="css/reset.css" />
-	<link rel="stylesheet" href="css/bootstrap.min.css" />
-	<link rel="stylesheet" href="css/font-awesome.min.css" />
-
-	<link rel="stylesheet" href="css/idangerous.swiper.css" />
-	<link rel="stylesheet" href="css/justifiedGallery.min.css">
-	<link rel="stylesheet" href="css/colorbox.css">
+    <link rel="stylesheet" href="css/extras.css">
+    
 	<!-- CUSTOM CSS -->
 	<link rel="stylesheet" href="css/style.css" />
 
@@ -476,13 +471,9 @@
 
 
 	<!-- JavaScripts -->
-	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/idangerous.swiper.min.js"></script>
-	<script type="text/javascript" src="js/colorbox.js"></script>
-	<script type="text/javascript" src="js/jquery.justifiedGallery.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/extras.js"></script>   
 	<script type="text/javascript" src="js/custom.js"></script>
-	<script type="text/javascript" src="js/ps.js"></script>
 
 
 </body>
