--- a/desarrollos.html
+++ b/desarrollos.html
@@ -31,17 +31,12 @@
 	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<!-- CSS -->
-	<link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
-	
-    <link rel="stylesheet" href="css/idangerous.swiper.css" />   
-    <link rel="stylesheet" href="css/justifiedGallery.min.css">
-	<link rel="stylesheet" href="css/colorbox.css">
-	
-    <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="css/style.css" />
+<!-- VENDORS -->
+<link rel="stylesheet" href="css/extras.css">
+
+<!-- CUSTOM CSS -->
+
+<link rel="stylesheet" href="css/style.css" />
 
 </head>
 
@@ -253,13 +248,10 @@
 
 	</div>
 
-	<!-- JavaScripts -->
-	 <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/idangerous.swiper.min.js"></script>   
-    <script type="text/javascript" src="js/colorbox.js"></script>
-    <script type="text/javascript" src="js/jquery.justifiedGallery.min.js"></script>
-    <script type="text/javascript" src="js/custom.js"></script>
+<!-- JavaScripts -->
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/extras.js"></script>
+<script type="text/javascript" src="js/custom.js"></script>
 
 </body>
 
