--- a/contacto.html
+++ b/contacto.html
@@ -31,17 +31,12 @@
 	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<!-- VENDORS -->
-	<link rel="stylesheet" href="css/reset.css" />
-	<link rel="stylesheet" href="css/bootstrap.min.css" />
-	<link rel="stylesheet" href="css/font-awesome.min.css" />
-	<link rel="preload" as="font" type="font/woff2" href="css/fonts/lato-v14-latin-300.woff2" crossorigin>
-	<link rel="preload" as="font" type="font/woff2" href="css/fonts/lato-v14-latin-regular.woff2" crossorigin>
-	<link rel="stylesheet" href="css/idangerous.swiper.css" />
-	<link rel="stylesheet" href="css/justifiedGallery.min.css">
-	<link rel="stylesheet" href="css/colorbox.css">
-	<!-- CUSTOM CSS -->
-	<link rel="stylesheet" href="css/style.css" />
+<!-- VENDORS -->
+<link rel="stylesheet" href="css/extras.css">
+
+<!-- CUSTOM CSS -->
+
+<link rel="stylesheet" href="css/style.css" />
 
 </head>
 
@@ -283,14 +278,10 @@
 	</div>
 
 
-	<!-- JavaScripts -->
-	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/idangerous.swiper.min.js"></script>
-	<script type="text/javascript" src="js/colorbox.js"></script>
-	<script type="text/javascript" src="js/jquery.justifiedGallery.min.js"></script>
-	<script type="text/javascript" src="js/custom.js"></script>
-	<script type="text/javascript" src="js/ps.js"></script>
+<!-- JavaScripts -->
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/extras.js"></script>
+<script type="text/javascript" src="js/custom.js"></script>
 
 </body>
 
