cambios html del anterior commit

--- a/desarrollos.html
+++ b/desarrollos.html
@@ -156,6 +156,38 @@
 							</div>
 						</a>
 					</article>
+					<article class="portfolio col-xs-12 col-sm-6">
+						<a href="" class="image" style="background-image: url(img/desarrollos/edperfil_portada.jpg)">
+							<div class="content-overlay"></div>
+							<div class="content-details fadeIn-right">
+								<h3 class="content-title">EDITORIAL PERFIL</h3>
+							</div>
+						</a>
+					</article>
+					<article class="portfolio col-xs-12 col-sm-6">
+						<a href="" class="image" style="background-image: url(img/desarrollos/market_portada.jpg)">
+							<div class="content-overlay"></div>
+							<div class="content-details fadeIn-right">
+								<h3 class="content-title">THE PICKET MARKET</h3>
+							</div>
+						</a>
+					</article>
+					<article class="portfolio col-xs-12 col-sm-6">
+						<a href="" class="image" style="background-image: url(img/desarrollos/zero_portada.jpg)">
+							<div class="content-overlay"></div>
+							<div class="content-details fadeIn-right">
+								<h3 class="content-title">MUNDO ZERO</h3>
+							</div>
+						</a>
+					</article>
+					<article class="portfolio col-xs-12 col-sm-6">
+						<a href="" class="image" style="background-image: url(img/desarrollos/burger_portada.jpg)">
+							<div class="content-overlay"></div>
+							<div class="content-details fadeIn-right">
+								<h3 class="content-title">BURGER BISTRO</h3>
+							</div>
+						</a>
+					</article>
 
 				</div>
 
