--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
 			</video>
 			<h1><img src="./img/logo-w.png" alt=""></h1>
 		</div>
-		
+<!-- Slide -->
+<div class="swiper-slide overlay " style="background-image: url('img/slide_2.jpg')">
+	<!-- <h1>Less is more, more or less</h1> -->
+</div>
 		<!-- Slide -->
 		<div class="swiper-slide overlay " style="background-image: url('img/slide_3.jpg')">
 			<!-- <h1>Robust, clean, comfortable</h1> -->
@@ -136,9 +139,18 @@
 			<!-- <h1>Showcase your work with Rayleigh</h1> -->
 		</div>
 		<!-- Slide -->
-		<div class="swiper-slide overlay " style="background-image: url('img/slide_2.jpg')">
-			<!-- <h1>Less is more, more or less</h1> -->
+		<div class="swiper-slide overlay " style="background-image: url('img/slide_8.jpg')">
+			<!-- <h1>Showcase your work with Rayleigh</h1> -->
 		</div>
+		<!-- Slide -->
+		<div class="swiper-slide overlay " style="background-image: url('img/slide_9.jpg')">
+			<!-- <h1>Showcase your work with Rayleigh</h1> -->
+		</div>
+		<!-- Slide -->
+		<div class="swiper-slide overlay " style="background-image: url('img/slide_10.jpg')">
+			<!-- <h1>Showcase your work with Rayleigh</h1> -->
+		</div>
+		
 
 
 	</div>
