--- a/lifestyle.html
+++ b/lifestyle.html
@@ -111,7 +111,22 @@
 
 
             <!-- Main content -->
+<div class="row personal-profiles">
 
+
+    <!-- Personal profile -->
+    <article class="col-12">
+        <div class="portfolio-todos">
+            <div class="image" style="background-image: url(img/interiores/di_top.jpg)"></div>
+            <div class="inner">
+                <header>
+                    <h3>Lorem, ipsum dolor.</h3>
+                </header>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo corrupti, amet nihil assumenda natus maiores iste eligendi porro excepturi ipsum quia aliquid iusto provident atque corporis blanditiis, odit dolor totam facere saepe eius unde laudantium vero. Iste quisquam quasi quia omnis tempore, enim cumque dolor voluptatum quae sint veritatis recusandae.</p>
+            </div>
+        </div>
+    </article>
+</div>
             <div class="gallery" itemscope>
 
                     <a href="./img/lifestyle/ls_01.jpg" >
