--- a/interiores.html
+++ b/interiores.html
@@ -29,8 +29,8 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
     <meta name="theme-color" content="#ffffff" />
 
-<!-- VENDORS -->
-<link rel="stylesheet" href="css/extras.css">
+    <!-- VENDORS -->
+    <link rel="stylesheet" href="css/extras.css">
     <!-- CUSTOM CSS -->
     <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -93,6 +93,28 @@
                 <h1>Diseño de Interiores</h1>
                 <h2>Verónica Jijena Sánchez</h2>
             </header>
+            <div class="row personal-profiles">
+
+
+                <!-- Personal profile -->
+                <article class="col-12">
+                    <div class="portfolio-todos">
+                        <div class="image" style="background-image: url(img/interiores/di_top.jpg)"></div>
+                        <div class="inner">
+                            <header>
+                                <h3>Lorem, ipsum dolor.</h3>
+                            </header>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo corrupti, amet nihil
+                                assumenda natus
+                                maiores iste eligendi porro excepturi ipsum quia aliquid iusto provident atque corporis
+                                blanditiis,
+                                odit dolor totam facere saepe eius unde laudantium vero. Iste quisquam quasi quia omnis
+                                tempore,
+                                enim cumque dolor voluptatum quae sint veritatis recusandae.</p>
+                        </div>
+                    </div>
+                </article>
+            </div>
 
             <!-- Main content -->
             <div class="gallery">
@@ -230,11 +252,11 @@
     </div>
 
 
-<!-- JavaScripts -->
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/extras.js"></script>
+    <!-- JavaScripts -->
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/extras.js"></script>
     <script type="text/javascript" src="js/custom.js"></script>
-    
+
 </body>
 
 </html>
